Added footer with GitHub link in html and added css properties

--- a/index.html
+++ b/index.html
@@ -206,11 +206,16 @@
           </div>
         </div>
       </div>
+      <div class="footer">
+          Coded by <a href="https://github.com/nbatko/WeatherApp" target="_blank">Natalia Batko</a>
+          <br />for <a href="https://www.shecodes.io/" target="_blank">SheCodes+</a> Workshop
+      </div>
     </div>
     <script type="text/javascript">
       showDateTime();
       displayGeoApiPrompt();
     </script>
+
   </body>
 </html>
 
